--- a/index.html
+++ b/index.html
@@ -7,14 +7,25 @@
     <link href="style.css" rel="stylesheet" type="text/css" />
   </head>
   <body>
-    <h1>Talk Bananananana</h1>
-    <textarea
-      id="userInput"
-      placeholder="Please enter the text here!"
-    ></textarea>
-    <button id="btn-translate">Click me!</button>
-    <div style="font-size: larger">Output will come here 👇</div>
-    <div id="output"></div>
+    <nav>
+      <div>Talk Bananananana 🍌</div>
+    </nav>
+    <main>
+      <textarea
+        id="userInput"
+        placeholder="Please enter the message you want to convert to banana language!"
+      ></textarea>
+      <button id="btn-translate">Translate the text!</button>
+      <div>Translation will come here 👇</div>
+      <div id="translate-output"></div>
+    </main>
+    <footer>
+      <div>about</div>
+      <p>Have you heard of minnions? Minions have their own language called Minionese! Let's check out some of their favorite phrases.
+ 
+
+        Bello! means Hello!</p>
+    </footer>
     <script src="script.js" type="text/javascript"></script>
   </body>
 </html>
